--- a/inscripcion-a-mano.html
+++ b/inscripcion-a-mano.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AÚN NO ESTÁ LISTA</title>
+    <title>AÚN NO ESTÁ LISTO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body class="bg-light">
@@ -34,20 +34,17 @@
       if(d.id != '—'){
     aqui.innerHTML += `<div class="col my-4">
         <div class="card shadow-sm h-100">
-          <div class="card-body">
-          <h1 class="fs-5">${d.name}</h1>
+          <div class="card-header">
+          <h1 class="fs-4 mt-2">${d.name}</h1>
           <h3 class="fs-6">Jerarquía: ${d.nivel}</h3>
           <h3 class="fs-6">Adscripción: ${d.adscripcion}</h3>
           <address class="fs-6 mb-0">${link(d.perfil)}</address>
           </div>
-          <ul class="list-group list-group-flush">
-    <li class="list-group-item small">${d.descriptor}</li>
-    </ul>
           <div class="card-body">
-
+          <p small">${d.descriptor}</p>
           <p>Líneas de investigación en Seminario de Licenciatura, mención <code>{Acá se desplegará mención marcada en columna P o Q}</code>:</p>
           <ul>
-            <li><code>{Acá se desplegará cada línea de investigación marcada, en columas I, J, K, L, M, N}</code></li>
+            <li><code>{Acá se desplegará cada línea de investigación marcada en columas I, J, K, L, M, N}</code></li>
           </ul>
           <p><strong>${d.cupos_sem}</strong> cupos disponibles en Seminario de Licenciatura I</p>
           <p>Énfasis en Proyecto de Título de <code>{Acá se desplegará lo marcado en columnas O, P, Q}</code></p>
@@ -56,7 +53,7 @@
           </ul>
           <p><strong>${d.cupos_tit}</strong> cupos disponibles en Proyecto de Título I</p>
           </div>
-          <div class="card-header">${rol(d.nivel)}</div>
+          <div class="card-footer">${rol(d.nivel)}</div>
         </div>
       </div>`
     }})
