--- a/inscripcion-a-seminario.html
+++ b/inscripcion-a-seminario.html
@@ -22,11 +22,10 @@
                     </h3>
 
                     <div class="btn-group mt-4" role="group">
-                      <a class="btn btn-outline-secondary active" href="inscripcion-a-mano.html">Listado completo</a>
-                      <a class="btn btn-outline-secondary" href="inscripcion-a-seminario.html">Con cupos para Seminario <span class="d-none d-lg-inline">de Licenciatura I</span></a>
+                      <a class="btn btn-outline-secondary" href="inscripcion-a-mano.html">Listado completo</a>
+                      <a class="btn btn-outline-secondary active" href="inscripcion-a-seminario.html">Con cupos para Seminario <span class="d-none d-lg-inline">de Licenciatura I</span></a>
                       <a class="btn btn-outline-secondary" href="inscripcion-a-titulo.html">Con cupos para <span class="d-none d-lg-inline">Proyecto de</span> Título <span class="d-none d-lg-inline">I</span></a>
                     </div>
-
                 </div>
             </div>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3" id="aqui"></div>
@@ -117,7 +116,7 @@
 
                     }
 
-                construye(todosOK);
+                construye(soloSeminarioOK);
 
                 }
             });
