--- a/inscripcion-a-titulo.html
+++ b/inscripcion-a-titulo.html
@@ -22,9 +22,9 @@
                     </h3>
 
                     <div class="btn-group mt-4" role="group">
-                      <a class="btn btn-outline-secondary active" href="inscripcion-a-mano.html">Listado completo</a>
+                      <a class="btn btn-outline-secondary" href="inscripcion-a-mano.html">Listado completo</a>
                       <a class="btn btn-outline-secondary" href="inscripcion-a-seminario.html">Con cupos para Seminario <span class="d-none d-lg-inline">de Licenciatura I</span></a>
-                      <a class="btn btn-outline-secondary" href="inscripcion-a-titulo.html">Con cupos para <span class="d-none d-lg-inline">Proyecto de</span> Título <span class="d-none d-lg-inline">I</span></a>
+                      <a class="btn btn-outline-secondary active" href="inscripcion-a-titulo.html">Con cupos para <span class="d-none d-lg-inline">Proyecto de</span> Título <span class="d-none d-lg-inline">I</span></a>
                     </div>
 
                 </div>
@@ -117,7 +117,7 @@
 
                     }
 
-                construye(todosOK);
+                construye(soloTituloOK);
 
                 }
             });
