--- a/inscripcion-a-titulo.html
+++ b/inscripcion-a-titulo.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#1f5592" />
         <meta name="author" content="Felipe Alberto Cortez Orellana" />
-        <title>LUNES 25 Y MARTES 26 DE MARZO, 2024</title>
+        <title>Hall Central FAU - 11.00 a 13.30 hrs.</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
         <link href="style.css" rel="stylesheet" />
     </head>
@@ -111,7 +111,7 @@
                                     <hr style="border-top:1px dotted silver; border-bottom:none;">
                                     <p class="text">Su(s) énfasis en <strong>Proyecto de Título Profesional de ${menciones(d.menciones)}</strong>:</p>
                                     <ul>${enfasis(d.enfasis)}</ul>
-                                    <p>${disponibleTitulo(d.cupos_sem)}</p>
+                                    <p>${disponibleTitulo(d.cupos_tit)}</p>
                                   </div>
                                   <div class="card-footer">${rol(d.nivel)}</div>
                                 </div>
